[package]
name = "rusviate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
error-stack = "0.4.1"
regex = "1.9.6"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
octocrab = "0.30.1"
simple-home-dir = { version = "0.2.0", features = ["expand_tilde"] }
sha2 = "0.10.8"
decompress = "0.6.0"