[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.1"
octocrab = "0.31.2"
sha2 = "0.10.8"
simple-home-dir = { version = "0.2.0", features = ["expand_tilde"] }
decompress = "0.6.0"


